Updated blog.html & blog.css to follow the rubric

--- a/css/base.css
+++ b/css/base.css
@@ -41,13 +41,15 @@ body {
     color: var(--color-grey-dark-2);
     font-weight: 300;
     line-height: 1.6;
+    height: 100vh;
 }
 
 .container {
     display: grid;
-    grid-template-rows: minmax(min-content, 5vh) repeat(2, min-content) minmax(min-content, 5vh); 
+    grid-template-rows: minmax(min-content, 5vh) repeat(2,min-content) minmax(min-content, 5vh); 
     grid-template-columns: [sidebar-start] 16rem [sidebar-end full-start] minmax(2rem, 1fr) [center-start] 
     repeat(3, [col-start] minmax(min-content, 38rem) [col-end]) [center-end] minmax(2rem, 1fr) [full-end];
+    grid-row-gap: 12px;
 }
 
 .container > * {
@@ -62,11 +64,12 @@ body {
 }
 
 @media (max-width: 875px) {
-
     .container {
         grid-template-rows: minmax(min-content, 5vh) minmax(min-content,5vh) repeat(2, min-content) minmax(min-content, 5vh);
         grid-template-columns: [full-start center-start] 
         repeat(3, [col-start] minmax(min-content, 38rem) [col-end]) [center-end full-end];
+
+        grid-row-gap : 0;
     }
 }
 
