--- a/css/style.css
+++ b/css/style.css
@@ -1,10 +1,9 @@
 @import "./base.css";
-@import "./blog-header.css";
+@import "./blog.css";
 @import "./components.css";
 @import "./footer.css";
 @import "./header.css";
 @import "./id.css";
 @import "./jfm.css";
-@import "./posts.css";
 @import "./projects.css";
 @import "./sidebar.css";
